--- a/become-a-host/amenities.html
+++ b/become-a-host/amenities.html
@@ -13333,7 +13333,7 @@
                         <div class="_1v3ycqn">
                          <button tabindex="-1" aria-hidden="true" aria-label="User profile image" data-testid="message-thread-profile-link" type="button" class="_1pl8jcir">
                           <div class="_15cornq">
-                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
+                           <div class="img-middle" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
                           </div>
                          </button>
                         </div>
@@ -13553,7 +13553,7 @@
                         <div class="_1v3ycqn">
                          <button tabindex="-1" aria-hidden="true" aria-label="User profile image" data-testid="message-thread-profile-link" type="button" class="_1pl8jcir">
                           <div class="_15cornq">
-                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
+                           <div class="img-middle" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
                           </div>
                          </button>
                         </div>
