--- a/become-a-host/price.html
+++ b/become-a-host/price.html
@@ -738,7 +738,7 @@
                         <div class="_1v3ycqn">
                          <button tabindex="-1" aria-hidden="true" aria-label="User profile image" data-testid="message-thread-profile-link" type="button" class="_1pl8jcir">
                           <div class="_15cornq">
-                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
+                           <div class="img-middle" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
                           </div>
                          </button>
                         </div>
@@ -957,7 +957,7 @@
                         <div class="_1v3ycqn">
                          <button tabindex="-1" aria-hidden="true" aria-label="User profile image" data-testid="message-thread-profile-link" type="button" class="_1pl8jcir">
                           <div class="_15cornq">
-                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
+                           <div class="img-middle" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
                           </div>
                          </button>
                         </div>
@@ -1129,7 +1129,7 @@
                <button type="button" class="_15ut2yit">
                 <span class="_jr600v">
                  <span class="_1wiynur">
-                  <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
+                  <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
                    <img
                     class="img-full"
                     aria-hidden="true"
