--- a/edit/photos.html
+++ b/edit/photos.html
@@ -3615,7 +3615,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc4MA=="
@@ -3686,7 +3686,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
@@ -3757,7 +3757,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
@@ -3828,7 +3828,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
@@ -3899,7 +3899,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2MA=="
@@ -3970,7 +3970,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
@@ -4041,7 +4041,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
@@ -4112,7 +4112,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
@@ -4183,7 +4183,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA=="
@@ -4367,7 +4367,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc4MA=="
@@ -4438,7 +4438,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Nw=="
@@ -4509,7 +4509,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Ng=="
@@ -4580,7 +4580,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2Mw=="
@@ -4651,7 +4651,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2MA=="
@@ -4722,7 +4722,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc2NA=="
@@ -4793,7 +4793,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1Mw=="
@@ -4864,7 +4864,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNzI4OTc3OQ=="
@@ -4935,7 +4935,7 @@
                             <div class="_1258d0t">
                              <div class="_100wjs0">
                               <div
-                               class="_1h6n1zu"
+                               class="img-middle"
                                role="img"
                                aria-busy="false"
                                aria-label="Published null RXhwZXJpZW5jZVBpY3R1cmU6MTQyNjkyODc1NA=="
