--- a/edit/title.html
+++ b/edit/title.html
@@ -764,7 +764,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                <div class="_12kfhdn">
                 <ul class="_qr4oq3">
                  <li class="_1bwncnd">
-                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
+                  <div class="img-middle" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
                     class="img-full"
                     aria-hidden="true"
@@ -779,7 +779,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                   <div class="_51dwk2">Trail run through beautiful Jeju Island</div>
                  </li>
                  <li class="_1bwncnd">
-                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
+                  <div class="img-middle" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
                     class="img-full"
                     aria-hidden="true"
@@ -794,7 +794,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                   <div class="_51dwk2">Making pasta by hand with the grandmas</div>
                  </li>
                  <li class="_1bwncnd">
-                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
+                  <div class="img-middle" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
                     class="img-full"
                     aria-hidden="true"
@@ -809,7 +809,7 @@ Cooking Deep Fried Bright Orange Battered Eggs</textarea
                   <div class="_51dwk2">Penguin walk with a conservationist</div>
                  </li>
                  <li class="_1bwncnd">
-                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a woman smiling while playing guitar" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
+                  <div class="img-middle" role="img" aria-busy="false" aria-label="Image of a woman smiling while playing guitar" style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                    <img
                     class="img-full"
                     aria-hidden="true"
