--- a/landing-pages/onlinehost.html
+++ b/landing-pages/onlinehost.html
@@ -166,11 +166,11 @@
                         <div class="landing-page-section-lead-image-container">
                           <div style="padding: 0 4px">
                             <div
-                              class="landing-page-section-lead-image-wrapper"
+                              class="landing-page-section-lead-img-middle"
                             >
                               <div aria-hidden="true">
                                 <div
-                                  class="image-wrapper"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -310,7 +310,7 @@
                               style="height: 48px; width: 48px"
                             >
                               <div
-                                class="image-wrapper"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -367,7 +367,7 @@
                               style="height: 48px; width: 48px"
                             >
                               <div
-                                class="image-wrapper"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -425,7 +425,7 @@
                               style="height: 48px; width: 48px"
                             >
                               <div
-                                class="image-wrapper"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -496,11 +496,11 @@
                         <div class="landing-page-section-lead-image-container">
                           <div style="padding: 0 4px">
                             <div
-                              class="landing-page-section-lead-image-wrapper"
+                              class="landing-page-section-lead-img-middle"
                             >
                               <div aria-hidden="true">
                                 <div
-                                  class="image-wrapper"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -674,7 +674,7 @@
                             >
                               <div class="base-card-media-container">
                                 <div
-                                  class="image-wrapper"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -780,7 +780,7 @@
                             >
                               <div class="base-card-media-container">
                                 <div
-                                  class="image-wrapper"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -883,7 +883,7 @@
                             >
                               <div class="base-card-media-container">
                                 <div
-                                  class="image-wrapper"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -988,7 +988,7 @@
                             >
                               <div class="base-card-media-container">
                                 <div
-                                  class="image-wrapper"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -1119,11 +1119,11 @@
                         <div class="landing-page-section-lead-image-container">
                           <div style="padding: 0 4px">
                             <div
-                              class="landing-page-section-lead-image-wrapper"
+                              class="landing-page-section-lead-img-middle"
                             >
                               <div aria-hidden="true">
                                 <div
-                                  class="image-wrapper"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -1275,7 +1275,7 @@
                         <div class="landing-page-block-item">
                           <div style="padding: 0 4px">
                             <div
-                              class="landing-page-section-lead-image-wrapper"
+                              class="landing-page-section-lead-img-middle"
                             >
                               <a
                                 aria-label="Sample image for Meditate with Sheep"
@@ -1283,7 +1283,7 @@
                                 class="image-link"
                                 ><div aria-hidden="false">
                                   <div
-                                    class="image-wrapper"
+                                    class="img-middle"
                                     style="
                                       display: inline-block;
                                       vertical-align: bottom;
@@ -1353,7 +1353,7 @@
                         <div class="landing-page-block-item">
                           <div style="padding: 0 4px">
                             <div
-                              class="landing-page-section-lead-image-wrapper"
+                              class="landing-page-section-lead-img-middle"
                             >
                               <a
                                 aria-label="Sample image for Family Baking Fun"
@@ -1361,7 +1361,7 @@
                                 class="image-link"
                                 ><div aria-hidden="false">
                                   <div
-                                    class="image-wrapper"
+                                    class="img-middle"
                                     style="
                                       display: inline-block;
                                       vertical-align: bottom;
@@ -1431,7 +1431,7 @@
                         <div class="landing-page-block-item">
                           <div style="padding: 0 4px">
                             <div
-                              class="landing-page-section-lead-image-wrapper"
+                              class="landing-page-section-lead-img-middle"
                             >
                               <a
                                 aria-label="Sample image for Secrets of Magic"
@@ -1439,7 +1439,7 @@
                                 class="image-link"
                                 ><div aria-hidden="false">
                                   <div
-                                    class="image-wrapper"
+                                    class="img-middle"
                                     style="
                                       display: inline-block;
                                       vertical-align: bottom;
@@ -1566,11 +1566,11 @@
                         <div class="landing-page-section-lead-image-container">
                           <div style="padding: 0 4px">
                             <div
-                              class="landing-page-section-lead-image-wrapper"
+                              class="landing-page-section-lead-img-middle"
                             >
                               <div aria-hidden="true">
                                 <div
-                                  class="image-wrapper"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -1729,7 +1729,7 @@
                               style="height: 48px; width: 48px"
                             >
                               <div
-                                class="image-wrapper"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -1787,7 +1787,7 @@
                               style="height: 48px; width: 48px"
                             >
                               <div
-                                class="image-wrapper"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -1845,7 +1845,7 @@
                               style="height: 48px; width: 48px"
                             >
                               <div
-                                class="image-wrapper"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -1916,11 +1916,11 @@
                         <div class="landing-page-section-lead-image-container">
                           <div style="padding: 0 4px">
                             <div
-                              class="landing-page-section-lead-image-wrapper"
+                              class="landing-page-section-lead-img-middle"
                             >
                               <div aria-hidden="true">
                                 <div
-                                  class="image-wrapper"
+                                  class="img-middle"
                                   style="
                                     display: inline-block;
                                     vertical-align: bottom;
@@ -2413,7 +2413,7 @@
                   class="lite-image-ratio"
                   style="--dls-liteimage-padding-top: 50%"
                 >
-                  <div class="lite-image-wrapper">
+                  <div class="lite-img-middle">
                     <picture
                       ><source
                         srcset="
