--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1390,7 +1390,7 @@
                                                         <div class="_e7hn5" style="height: 56px; width: 56px;"><a target="_blank"
                                                             aria-label="Learn more about the host, Kat." href="/users/show/377445" class="_9bezani">
                                                             <div class="_1c81x67" style="height: 56px; width: 56px; border-radius: 50%;">
-                                                              <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Kat."
+                                                              <div class="img-middle" role="img" aria-busy="false" aria-label="Learn more about the host, Kat."
                                                                 style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                                 <img class="img-full" aria-hidden="true" alt="Learn more about the host, Kat." decoding="async"
                                                                   elementtiming="LCP-target"
@@ -1451,7 +1451,7 @@
                                                             <div class="_16ea8e8">
                                                               <div class="_e7hn5" style="height: 32px; width: 32px;">
                                                                 <div class="_1c81x67" style="height: 32px; width: 32px; border-radius: 50%;">
-                                                                  <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                                  <div class="img-middle" role="img" aria-busy="false"
                                                                     aria-label="Learn more about the host, Melanie."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                                     <img class="img-full" aria-hidden="true" alt="Learn more about the host, Melanie."
@@ -1471,7 +1471,7 @@
                                                             <div class="_16ea8e8">
                                                               <div class="_e7hn5" style="height: 32px; width: 32px;">
                                                                 <div class="_1c81x67" style="height: 32px; width: 32px; border-radius: 50%;">
-                                                                  <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                                  <div class="img-middle" role="img" aria-busy="false"
                                                                     aria-label="Learn more about the host, Karina."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                                     <img class="img-full" aria-hidden="true" alt="Learn more about the host, Karina."
@@ -1491,7 +1491,7 @@
                                                             <div class="_16ea8e8">
                                                               <div class="_e7hn5" style="height: 32px; width: 32px;">
                                                                 <div class="_1c81x67" style="height: 32px; width: 32px; border-radius: 50%;">
-                                                                  <div class="_1h6n1zu" role="img" aria-busy="false"
+                                                                  <div class="img-middle" role="img" aria-busy="false"
                                                                     aria-label="Learn more about the host, Valerie."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                                     <img class="img-full" aria-hidden="true" alt="Learn more about the host, Valerie."
@@ -6271,7 +6271,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                         <div class="_e7hn5" style="height: 56px; width: 56px;"><a target="_blank"
                                                             aria-label="Learn more about the host, Kat." href="/users/show/377445" class="_9bezani">
                                                             <div class="_1c81x67" style="height: 56px; width: 56px; border-radius: 50%;">
-                                                              <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Kat."
+                                                              <div class="img-middle" role="img" aria-busy="false" aria-label="Learn more about the host, Kat."
                                                                 style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                                 <img class="img-full" aria-hidden="true" alt="Learn more about the host, Kat." decoding="async"
                                                                   elementtiming="LCP-target"
@@ -6337,7 +6337,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                             <div class="_16ea8e8">
                                                               <div class="_e7hn5" style="height: 32px; width: 32px;">
                                                                 <div class="_1c81x67" style="height: 32px; width: 32px; border-radius: 50%;">
-                                                                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Melanie."
+                                                                  <div class="img-middle" role="img" aria-busy="false" aria-label="Learn more about the host, Melanie."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                                     <img class="img-full" aria-hidden="true" alt="Learn more about the host, Melanie." decoding="async"
                                                                       elementtiming="LCP-target"
@@ -6356,7 +6356,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                             <div class="_16ea8e8">
                                                               <div class="_e7hn5" style="height: 32px; width: 32px;">
                                                                 <div class="_1c81x67" style="height: 32px; width: 32px; border-radius: 50%;">
-                                                                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Karina."
+                                                                  <div class="img-middle" role="img" aria-busy="false" aria-label="Learn more about the host, Karina."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                                     <img class="img-full" aria-hidden="true" alt="Learn more about the host, Karina." decoding="async"
                                                                       elementtiming="LCP-target"
@@ -6375,7 +6375,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                             <div class="_16ea8e8">
                                                               <div class="_e7hn5" style="height: 32px; width: 32px;">
                                                                 <div class="_1c81x67" style="height: 32px; width: 32px; border-radius: 50%;">
-                                                                  <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Learn more about the host, Valerie."
+                                                                  <div class="img-middle" role="img" aria-busy="false" aria-label="Learn more about the host, Valerie."
                                                                     style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                                     <img class="img-full" aria-hidden="true" alt="Learn more about the host, Valerie." decoding="async"
                                                                       elementtiming="LCP-target"
