--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -204,7 +204,7 @@
                                                   <div class="img-container"><button
                                                       aria-label="Listing image 1, Show all photos" type="button"
                                                       class="_1xh26pm2" data-modal="#gallery-modal-mobile">
-                                                      <div class="_1h6n1zu"
+                                                      <div class="img-middle"
                                                         style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                         <picture>
                                                           <source
@@ -226,7 +226,7 @@
                                                   <div class="img-container"><button
                                                       aria-label="Listing image 1, Show all photos" type="button"
                                                       class="_1xh26pm2">
-                                                      <div class="_1h6n1zu"
+                                                      <div class="img-middle"
                                                         style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                                                         <picture>
                                                           <source
@@ -24328,7 +24328,7 @@
                               </div>
                             </div>
                             <div class="_fz3zdn">
-                              <div class="_1h6n1zu"
+                              <div class="img-middle"
                                 style="display: inline-block; vertical-align: bottom; height: auto; width: 88px; min-height: 1px;">
                                 <img class="_792k0r1" aria-hidden="true" alt="" elementtiming="LCP-target"
                                   src="https://a0.muscache.com/im/pictures/9a1bbbb4-2007-4f21-893f-3bc699f9e1d7.jpg?aki_policy=medium"
