--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -27520,7 +27520,7 @@
                       <div data-plugin-in-point-id="WHAT_COUNTS_AS_A_PET_MODAL"
                         data-section-id="WHAT_COUNTS_AS_A_PET_MODAL">
                         <div class="i2ckb4z dir dir-ltr">
-                          <div class="_1h6n1zu" role="img" aria-busy="false"
+                          <div class="img-middle" role="img" aria-busy="false"
                             aria-label="A guest with a service animal being greeted by a host"
                             style="display: inline-block; vertical-align: bottom; height: 100%; width: 100%; min-height: 1px;">
                             <img class="img-full" aria-hidden="true"
