--- a/submission/wwd.html
+++ b/submission/wwd.html
@@ -3859,7 +3859,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                  <div id="default" aria-disabled="false" role="group" aria-labelledby="default-row-title" class="rcem0st dir dir-ltr">
                   <div class="flex">
                    <div class="_7ytxmo">
-                    <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
+                    <div class="img-middle" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
                       class="img-full"
                       aria-hidden="true"
@@ -3891,7 +3891,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                  <div id="cooking" aria-disabled="false" role="group" aria-labelledby="cooking-row-title" class="rcem0st dir dir-ltr">
                   <div class="flex">
                    <div class="_7ytxmo">
-                    <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
+                    <div class="img-middle" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
                       class="img-full"
                       aria-hidden="true"
@@ -3925,7 +3925,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                  <div id="animals" aria-disabled="false" role="group" aria-labelledby="animals-row-title" class="rcem0st dir dir-ltr">
                   <div class="flex">
                    <div class="_7ytxmo">
-                    <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
+                    <div class="img-middle" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
                       class="img-full"
                       aria-hidden="true"
@@ -3962,7 +3962,7 @@ Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
                   <div class="flex">
                    <div class="_7ytxmo">
                     <div
-                     class="_1h6n1zu"
+                     class="img-middle"
                      role="img"
                      aria-busy="false"
                      aria-label="Image of a woman smiling while playing guitar"
