--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -176,7 +176,7 @@
                               <button type="button" class="_15i50to6">
                                <span class="_jr600v">
                                 <span class="_cy0new">
-                                 <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
+                                 <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                                   <img
                                    class="img-full"
                                    aria-hidden="true"
@@ -213,7 +213,7 @@
                               <button type="button" class="_15i50to6">
                                <span class="_jr600v">
                                 <span class="_cy0new">
-                                 <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
+                                 <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                                   <img
                                    class="img-full"
                                    aria-hidden="true"
@@ -247,7 +247,7 @@
                               <button type="button" class="_15i50to6">
                                <span class="_jr600v">
                                 <span class="_cy0new">
-                                 <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
+                                 <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                                   <img
                                    class="img-full"
                                    aria-hidden="true"
@@ -435,7 +435,7 @@
                 <button type="button" class="_15i50to6">
                  <span class="_jr600v">
                   <span class="_cy0new">
-                   <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
+                   <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                     <img
                      class="img-full"
                      aria-hidden="true"
@@ -472,7 +472,7 @@
                 <button type="button" class="_15i50to6">
                  <span class="_jr600v">
                   <span class="_cy0new">
-                   <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
+                   <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                     <img
                      class="img-full"
                      aria-hidden="true"
@@ -506,7 +506,7 @@
                 <button type="button" class="_15i50to6">
                  <span class="_jr600v">
                   <span class="_cy0new">
-                   <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
+                   <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 32px; width: 32px; min-height: 1px; border-radius: 8px;">
                     <img
                      class="img-full"
                      aria-hidden="true"
@@ -654,7 +654,7 @@
                         <div class="_1v3ycqn">
                          <button tabindex="-1" aria-hidden="true" aria-label="User profile image" data-testid="message-thread-profile-link" type="button" class="_1pl8jcir">
                           <div class="_15cornq">
-                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
+                           <div class="img-middle" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
                           </div>
                          </button>
                         </div>
@@ -873,7 +873,7 @@
                         <div class="_1v3ycqn">
                          <button tabindex="-1" aria-hidden="true" aria-label="User profile image" data-testid="message-thread-profile-link" type="button" class="_1pl8jcir">
                           <div class="_15cornq">
-                           <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
+                           <div class="img-middle" role="img" aria-busy="false" aria-label="Select to open user profile for Myrna" style="display: inline-block; vertical-align: bottom; height: 36px; width: 36px; min-height: 1px;"></div>
                           </div>
                          </button>
                         </div>
@@ -1045,7 +1045,7 @@
                <button type="button" class="_15ut2yit">
                 <span class="_jr600v">
                  <span class="_1wiynur">
-                  <div class="_1h6n1zu" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
+                  <div class="img-middle" style="display: inline-block; vertical-align: bottom; height: 62px; width: 62px; min-height: 1px; border-radius: 50%;">
                    <img
                     class="img-full"
                     aria-hidden="true"
