--- a/edit/what.html
+++ b/edit/what.html
@@ -4027,7 +4027,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                  <div id="default" aria-disabled="false" role="group" aria-labelledby="default-row-title" class="rcem0st dir dir-ltr">
                   <div class="flex">
                    <div class="_7ytxmo">
-                    <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
+                    <div class="img-middle" role="img" aria-busy="false" aria-label="Image of a group of runners" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
                       class="img-full"
                       aria-hidden="true"
@@ -4059,7 +4059,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                  <div id="cooking" aria-disabled="false" role="group" aria-labelledby="cooking-row-title" class="rcem0st dir dir-ltr">
                   <div class="flex">
                    <div class="_7ytxmo">
-                    <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
+                    <div class="img-middle" role="img" aria-busy="false" aria-label="Image of a group of people cooking" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
                       class="img-full"
                       aria-hidden="true"
@@ -4093,7 +4093,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                  <div id="animals" aria-disabled="false" role="group" aria-labelledby="animals-row-title" class="rcem0st dir dir-ltr">
                   <div class="flex">
                    <div class="_7ytxmo">
-                    <div class="_1h6n1zu" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
+                    <div class="img-middle" role="img" aria-busy="false" aria-label="Image of penguins" style="display: inline-block; vertical-align: bottom; height: 74px; width: 56px; min-height: 1px; border-radius: 8px;">
                      <img
                       class="img-full"
                       aria-hidden="true"
@@ -4130,7 +4130,7 @@ Join me in this fun and easy cooking experience where you will learn techniques 
                   <div class="flex">
                    <div class="_7ytxmo">
                     <div
-                     class="_1h6n1zu"
+                     class="img-middle"
                      role="img"
                      aria-busy="false"
                      aria-label="Image of a woman smiling while playing guitar"
