--- a/landing-pages/host-protection-insurance.html
+++ b/landing-pages/host-protection-insurance.html
@@ -109,7 +109,7 @@
                                   --dls-liteimage-padding-top: 50%;
                                 "
                               >
-                                <div class="lite-image-wrapper">
+                                <div class="lite-img-middle">
                                   <img
                                     class="lite-image-default"
                                     aria-hidden="true"
@@ -252,7 +252,7 @@
                               style="height: 48px; width: 48px"
                             >
                               <div
-                                class="image-wrapper"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -321,7 +321,7 @@
                               style="height: 48px; width: 48px"
                             >
                               <div
-                                class="image-wrapper"
+                                class="img-middle"
                                 style="
                                   display: inline-block;
                                   vertical-align: bottom;
@@ -523,7 +523,7 @@
                               >
                                 <div class="base-card-media-container">
                                   <div
-                                    class="image-wrapper"
+                                    class="img-middle"
                                     style="
                                       display: inline-block;
                                       vertical-align: bottom;
@@ -1056,7 +1056,7 @@
                                           --dls-liteimage-padding-top: 56.25%;
                                         "
                                       >
-                                        <div class="lite-image-wrapper">
+                                        <div class="lite-img-middle">
                                           <img
                                             class="lite-image-default"
                                             aria-hidden="true"
@@ -1131,7 +1131,7 @@
                                           --dls-liteimage-padding-top: 56.25%;
                                         "
                                       >
-                                        <div class="lite-image-wrapper">
+                                        <div class="lite-img-middle">
                                           <img
                                             class="lite-image-default"
                                             aria-hidden="true"
