--- a/listings-product/contact-host-message.html
+++ b/listings-product/contact-host-message.html
@@ -223,7 +223,7 @@
                                                   </div>
                                                   <div class="_1auj8vf">
                                                     <div
-                                                      class="_1h6n1zu"
+                                                      class="img-middle"
                                                       style="
                                                         display: inline-block;
                                                         vertical-align: bottom;
